<resources>
    <!--common-->
    <string name="app_name">GitFox</string>
    <string name="cancel">Cancel</string>
    <string name="share_to">Share to</string>
    <string name="only_opened">Only opened</string>
    <string name="ok">OK</string>
    <string name="refresh">Refresh</string>
    <string name="at">at</string>
    <string name="to">to</string>
    <string name="on">on</string>
    <string name="for_str">for</string>
    <string name="you">you</string>
    <string name="yourself">yourself</string>
    <string name="loading">loading…</string>
    <string name="auto_logout_message">Session error. Auto logout…</string>

    <!--Main screen-->
    <string name="gitlab_activity">Activity</string>
    <string name="gitlab_issue">Issues</string>
    <string name="gitlab_merge">Merge Requests</string>
    <string name="gitlab_todo">Todos</string>

    <!--Auth screen-->
    <string name="auth_title">Authorization</string>
    <string name="invalid_hash">Invalid auth response!</string>
    <string name="auth_error">Unknown error! Try again later</string>
    <string name="custom_auth_menu">Custom server</string>
    <string name="custom_authorization">Enter your access token</string>
    <string name="server_path">Url:</string>
    <string name="server_path_hint">https://gitlab.com/</string>
    <string name="private_token">Token:</string>
    <string name="private_token_hint">abcdefg1234</string>
    <string name="login">Login</string>
    <string name="invalid_server_url">Invalid server path!</string>
    <string name="empty_token">Empty token!</string>

    <!--About screen-->
    <string name="about_title">About</string>
    <string name="about_info">Info</string>
    <string name="about_feedback">Write feedback</string>
    <string name="about_open_source_libraries">Open Source Libraries</string>
    <string name="about_authors">Authors</string>

    <!--License name-->
    <string name="library_license_MIT">MIT</string>
    <string name="library_license_APACHE_2">Apache 2.0</string>
    <string name="library_license_CUSTOM">Custom license</string>
    <string name="library_license_NONE">None</string>

    <!--Projects screen-->
    <string name="projects_title">Projects</string>
    <string name="my_projects_title">My projects</string>
    <string name="starred_projects_title">Starred</string>
    <string name="all_projects_title">All</string>

    <!--Navigation drawer-->
    <string name="projects_item">Projects</string>
    <string name="activity_item">Activity</string>
    <string name="groups_item">Groups</string>
    <string name="settings_item">Settings</string>
    <string name="about_item">About</string>
    <string name="exit">exit</string>
    <string name="logout_question">Logout?</string>
    <string name="add_account">Add another account</string>

    <!--Error messages todo-->
    <string name="unknown_error">Unknown error</string>
    <string name="network_error">Network error</string>
    <string name="not_modified_error">304 Not Modified</string>
    <string name="bad_request_error">400 Bad Request</string>
    <string name="unauthorized_error">401 Unauthorized</string>
    <string name="forbidden_error">403 Forbidden</string>
    <string name="not_found_error">404 Not Found</string>
    <string name="method_not_allowed_error">405 Method Not Allowed</string>
    <string name="conflict_error">409 Conflict</string>
    <string name="unprocessable_error">422 Unprocessable</string>
    <string name="server_error_error">500 Server Error</string>

    <!--My Issues screen-->
    <string name="issues_created_by_me">Created</string>
    <string name="issues_assigned_by_me">Assigned</string>
    <string name="by_author" formatted="false">by %s</string>
    <string name="sharp_id" formatted="false">#%d</string>
    <string name="time_sec" formatted="false">%d sec</string>
    <string name="time_min" formatted="false">%d min</string>
    <string name="time_hour" formatted="false">%d h</string>
    <string name="time_day" formatted="false">%d d</string>
    <string name="time_ago" formatted="false">%s ago</string>

    <!--My Events Screen-->
    <string name="full_event_target_user">user</string>
    <string name="full_event_target_project">project</string>
    <string name="full_event_target_issue">issue</string>
    <string name="full_event_target_merge_request">merge request</string>
    <string name="full_event_target_commit">commit</string>
    <string name="full_event_target_snippet">snippet</string>
    <string name="full_event_target_milestone">milestone</string>
    <string name="full_event_target_branch">branch</string>
    <string name="full_event_target_tag">tag</string>

    <string name="event_action_closed">closed</string>
    <string name="event_action_commented_on">commented on</string>
    <string name="event_action_created">created</string>
    <string name="event_action_imported">imported</string>
    <string name="event_action_pushed_to">pushed to</string>
    <string name="event_action_pushed_new">pushed new</string>
    <string name="event_action_deleted">deleted</string>
    <string name="event_action_accepted">accepted</string>
    <string name="event_action_joined">joined</string>
    <string name="event_action_updated">updated</string>
    <string name="event_action_reopened">reopened</string>
    <string name="event_action_pushed">pushed</string>
    <string name="event_action_commented">commented</string>
    <string name="event_action_destroyed">destroyed</string>
    <string name="event_action_expired">expired</string>
    <string name="event_action_opened">opened</string>
    <string name="event_action_left">left</string>
    <string name="event_action_merged">merged</string>

    <string name="target_status_opened">Opened</string>
    <string name="target_status_closed">Closed</string>
    <string name="target_status_merged">Merged</string>
    <string name="target_confidential_title">Confidential Event</string>
    <string name="target_confidential_description">This event is not available.</string>

    <!--My Merge Requests Screen-->
    <string name="merge_request_created_by_me">Created</string>
    <string name="merge_request_assigned_by_me">Assigned</string>
    <string name="merge_request_item_opened_at_by_author" formatted="false">opened %s by %s</string>

    <!--Zero screen-->
    <string name="empty_error">Oops!</string>
    <string name="empty_error_description">Something went wrong.\nPlease try again later.</string>
    <string name="empty_data">Empty data</string>
    <string name="empty_data_description">You have not data yet.\nPlease try again later.</string>

    <!--My Todos Screen-->
    <string name="my_todos_pending">Pending</string>
    <string name="my_todos_done">Done</string>
    <string name="todo_action_assigned">assigned</string>
    <string name="todo_action_mentioned">mentioned</string>
    <string name="todo_action_build_failed">The build failed</string>
    <string name="todo_action_marked">added a todo</string>
    <string name="todo_action_approval_required">set you as an approver</string>
    <string name="todo_action_directly_addressed">directly addressed</string>
    <string name="todo_action_unmergeable">Could not merge</string>

    <!--Merge Request Info screen-->
    <string name="merge_request_title">!%d</string>
    <string name="merge_request_details_tab">Details</string>
    <string name="merge_request_info_tab">Info</string>
    <string name="merge_request_commits_tab">Commits</string>
    <string name="merge_request_discussion_tab">Discussion</string>
    <string name="merge_request_changes_tab">Changes</string>
    <string name="merge_request_info_subtitle" formatted="false">%s by %s %s</string>

    <!--Merge Request Commits screen-->
    <string name="merge_request_commits_description" formatted="false">%s authored %s</string>

    <!--Merge Request Changes screen-->
    <string name="merge_request_changes_added_count" formatted="false">+%d</string>
    <string name="merge_request_changes_deleted_count" formatted="false">-%d</string>

    <!--Issue Info screen-->
    <string name="issue_title" formatted="false">#%d</string>
    <string name="issue_info_subtitle" formatted="false">%s by %s %s</string>

    <!--Issue Discussion screen-->
    <string name="issue_discussion_note_hint">Write a comment</string>

    <!--Project info screen-->
    <string name="menu_project_milestones">Milestones</string>
    <string name="menu_project_info">Info</string>
    <string name="menu_project_issue">Issues</string>
    <string name="menu_project_merge_request">Merge Requests</string>
    <string name="project_info">Info</string>
    <string name="project_events">Activity</string>
    <string name="project_labels">Labels</string>
    <string name="project_milestones">Milestones</string>
    <string name="project_members">Members</string>
    <string name="project_files">Files</string>
    <string name="project_milestone_date">%s ― %s</string>
    <string name="milestone_active">Opened</string>
    <string name="milestone_closed">Closed</string>

    <!--Project files screen-->
    <string name="project_files_show_branches">Branches</string>
    <string name="project_files_default_path">Project Files</string>
    <string name="project_files_no_branches">You have no branches</string>

    <!--Privacy policy screen-->
    <string name="privacy_policy">Privacy policy</string>

    <!--Label screen-->
    <string name="label_description_empty">No description</string>

    <!--Issue/MergeRequest info screen-->
    <string name="issue_merge_request_none">None</string>
    <string name="assignees_title">Assignees</string>
    <string name="milestone_title">Milestone</string>=
    <string name="due_date_title">Due date</string>
    <string name="time_stats_title">Time tracker</string>
    <string name="weight_title">Weight</string>
    <string name="lock_issue_title">Lock issue</string>
    <string name="lock_unlocked">Unlocked</string>
    <string name="lock_locked">Locked</string>
    <string name="confidentiality_title">Confidentiality</string>
    <string name="confidentiality_confidential">This issue is confidential</string>
    <string name="confidentiality_not_confidential">Not confidential</string>
    <string name="labels_title">Labels</string>
    <string name="time_stats_empty_stats">No estimate or time spent</string>
    <string name="time_stats_spent_time">Spent:\u0020</string>
    <string name="time_stats_est_time">Est:\u0020</string>
    <string name="time_stats_estimated_time">Estimated:\u0020</string>
    <string name="merge_status_title">Merge status</string>
    <string name="lock_merge_request_title">Lock merge request</string>

    <string name="merge_request_status_can_be_merged">Can be merged</string>
    <string name="merge_request_status_cannot_be_merged">Cannot be merged</string>
    <string name="merge_request_status_unchecked">Unchecked</string>

    <!--Members screen-->
    <string name="members_guest">Guest</string>
    <string name="members_reporter">Reporter</string>
    <string name="members_developer">Developer</string>
    <string name="members_maintainer">Maintainer</string>
    <string name="members_owner">Owner</string>

</resources>
