<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/issueInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/assigneesTitle"
                style="@style/TextSubhead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/assignees_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/assigneesList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="@id/assigneesTitle"
                app:layout_constraintStart_toStartOf="@id/assigneesTitle"
                app:layout_constraintTop_toBottomOf="@id/assigneesTitle" />

            <TextView
                android:id="@+id/assigneesNone"
                style="@style/TextSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:alpha="0.38"
                android:text="@string/issue_merge_request_none"
                app:layout_constraintEnd_toEndOf="@id/assigneesTitle"
                app:layout_constraintStart_toStartOf="@id/assigneesTitle"
                app:layout_constraintTop_toBottomOf="@id/assigneesTitle" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/assigneesDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="assigneesList, assigneesNone" />

            <TextView
                android:id="@+id/milestoneTitle"
                style="@style/TextSubhead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/milestone_title"
                app:layout_constraintEnd_toStartOf="@id/dueDateTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/assigneesDivider" />

            <TextView
                android:id="@+id/milestoneValue"
                style="@style/TextSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@id/milestoneTitle"
                app:layout_constraintStart_toStartOf="@id/milestoneTitle"
                app:layout_constraintTop_toBottomOf="@id/milestoneTitle"
                tools:alpha="0.38"
                tools:text="dadklakdskldakldkdsakdalkdsadklsadklaskdlkldasklldsadlka" />

            <TextView
                android:id="@+id/dueDateTitle"
                style="@style/TextSubhead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/due_date_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/milestoneTitle"
                app:layout_constraintTop_toBottomOf="@id/assigneesDivider" />

            <TextView
                android:id="@+id/dueDateValue"
                style="@style/TextSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@id/dueDateTitle"
                app:layout_constraintStart_toStartOf="@id/dueDateTitle"
                app:layout_constraintTop_toBottomOf="@id/dueDateTitle"
                tools:alpha="0.38"
                tools:text="@string/issue_merge_request_none" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/firstDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="dueDateValue, milestoneValue" />

            <TextView
                android:id="@+id/timeStatsTitle"
                style="@style/TextSubhead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/time_stats_title"
                app:layout_constraintEnd_toStartOf="@id/weightTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstDivider" />

            <ru.terrakok.gitlabclient.ui.global.view.custom.TimeStatsView
                android:id="@+id/timeStatsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@id/timeStatsTitle"
                app:layout_constraintStart_toStartOf="@id/timeStatsTitle"
                app:layout_constraintTop_toBottomOf="@id/timeStatsTitle" />

            <TextView
                android:id="@+id/weightTitle"
                style="@style/TextSubhead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/weight_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/timeStatsTitle"
                app:layout_constraintTop_toBottomOf="@id/firstDivider" />

            <TextView
                android:id="@+id/weightValue"
                style="@style/TextSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@id/weightTitle"
                app:layout_constraintStart_toStartOf="@id/weightTitle"
                app:layout_constraintTop_toBottomOf="@id/weightTitle"
                tools:alpha="0.38"
                tools:text="@string/issue_merge_request_none" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/secondDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="timeStatsValue, weightValue" />

            <TextView
                android:id="@+id/lockIssueTitle"
                style="@style/TextSubhead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/lock_issue_title"
                app:layout_constraintEnd_toStartOf="@id/confidentialityTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/secondDivider" />

            <TextView
                android:id="@+id/lockIssueValue"
                style="@style/TextSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@id/lockIssueTitle"
                app:layout_constraintStart_toStartOf="@id/lockIssueTitle"
                app:layout_constraintTop_toBottomOf="@id/lockIssueTitle"
                tools:alpha="0.38"
                tools:text="@string/lock_unlocked" />

            <TextView
                android:id="@+id/confidentialityTitle"
                style="@style/TextSubhead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/confidentiality_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lockIssueTitle"
                app:layout_constraintTop_toBottomOf="@id/secondDivider" />

            <TextView
                android:id="@+id/confidentialityValue"
                style="@style/TextSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@id/confidentialityTitle"
                app:layout_constraintStart_toStartOf="@id/confidentialityTitle"
                app:layout_constraintTop_toBottomOf="@id/confidentialityTitle"
                tools:alpha="0.38"
                tools:text="@string/confidentiality_not_confidential" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/thirdDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="lockIssueValue, confidentialityValue" />

            <TextView
                android:id="@+id/labelsTitle"
                style="@style/TextSubhead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/labels_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/thirdDivider" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/labelsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:flexWrap="wrap"
                app:layout_constraintEnd_toEndOf="@id/labelsTitle"
                app:layout_constraintStart_toStartOf="@id/labelsTitle"
                app:layout_constraintTop_toBottomOf="@id/labelsTitle" />

            <TextView
                android:id="@+id/labelsNone"
                style="@style/TextSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:alpha="0.38"
                android:text="@string/issue_merge_request_none"
                app:layout_constraintEnd_toEndOf="@id/labelsTitle"
                app:layout_constraintStart_toStartOf="@id/labelsTitle"
                app:layout_constraintTop_toBottomOf="@id/labelsTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/fullscreenProgressView"
        layout="@layout/layout_gitlab_progress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>